@@ -183,7 +183,7 @@ namespace libtorrent
 					FILE_IO_PRIORITY_HINT_INFO priorityHint;
 					priorityHint.PriorityHint = IoPriorityHintLow;
 					SetFileInformationByHandle(e.file_ptr->native_handle(),
-						FileIoPriorityHintInfo, &priorityHint, sizeof(PriorityHint));
+						FileIoPriorityHintInfo, &priorityHint, sizeof(priorityHint));
 				}
 #endif
 #endif
